Fixed unaligned Getting Started button in Safari.

--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -23,6 +23,7 @@
 
 .yellow-button {
     @include button(#fede9e, #fdc452);
+    vertical-align: middle;
 }
 
 .tan-button {
